@@ -5,6 +5,7 @@ Date: 6/2/26
     - Fixed biter ramming crash.
     - Fixed crash when claiming hexes near ungenerated chunks.
     - Fixed that the piggy bank was deleting coins when your inventory is full.
+    - Fixed that trade productivity would be displayed as being high enough for item rank-ups but they weren't when attempted.
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.7
 Date: 4/2/26
